NetBSD Problem Report #2016

From gnats  Fri Feb  2 11:27:36 1996
Received: from gw.atria.com by pain.lcs.mit.edu (8.6.12/8.6.12) with ESMTP id LAA20433 for <gnats-bugs@gnats.netbsd.org>; Fri, 2 Feb 1996 11:16:40 -0500
Message-Id: <199602021612.LAA00473@trump.arlington.ma.us>
Date: Fri, 2 Feb 1996 11:12:34 -0500
From: John Kohl <jtk@atria.com>
Reply-To: jtk@atria.com
To: gnats-bugs@gnats.netbsd.org
Subject: sysctl kern.osrevision is bogus
X-Send-Pr-Version: 3.95

>Number:         2016
>Category:       kern
>Synopsis:       sysctl kern.osrevision is bogus
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Fri Feb 02 11:35:05 +0000 1996
>Closed-Date:    Thu Mar 20 22:57:20 +0000 1997
>Last-Modified:  Fri Mar 21 06:58:12 +0000 1997
>Originator:     John Kohl
>Release:        1.1
>Organization:
NetBSD Kernel Hackers `R` Us
>Environment:

System: NetBSD trump 1.1 NetBSD 1.1 (TRUMP) #14: Tue Jan 23 10:27:56 PST 1996 jtk@trump:/usr/src/sys/arch/i386/compile/TRUMP i386


>Description:
sysctl kern.osrevision returns an out-of-date revision.  It should be
something nearer to reality, say the value of NetBSD from /sys/sys/param.h
>How-To-Repeat:
% sysctl kern.osrevision
kern.osrevision = 199306

>Fix:
>Release-Note:
>Audit-Trail:

State-Changed-From-To: open->closed
State-Changed-By: mikel
State-Changed-When: Thu Mar 20 22:57:20 1997
State-Changed-Why:
fixed, thanks.  kern.osrevision now returns the value of the NetBSD
symbol, not the BSD symbol.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.