kern.osrevision now returns value of NetBSD symbol (from <sys/param.h>),   not BSD symbol.  fixes PR kern/2016.